\name{NEWS}
\title{News for \R Package \pkg{kit}}
\encoding{UTF-8}

\newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{version 0.0.19 (2024-09-07)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item Fix multiple warnings in C code.
    }
  }
}

\section{version 0.0.18 (2024-06-06)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item Fix \code{iif} tests for new version of R.
    }
  }
}

\section{version 0.0.17 (2024-05-03)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item Fix \code{nswitch}. Thanks to Sebastian Krantz for raising an issue.
    }
  }
  \subsection{Notes}{
    \itemize{
      \item Update copyright date in c files

      \item Fix note on CRAN regarding SETLENGTH
    }
  }
}

\section{version 0.0.16 (2024-03-01)}{
  \subsection{Notes}{
    \itemize{
     \item Check if \code{"kit.nThread"} is defined before setting it to \code{1L}
    }
  }
}

\section{version 0.0.15 (2023-10-01)}{
  \subsection{Notes}{
    \itemize{
     \item Correct typo in configure file
    }
  }
}

\section{version 0.0.14 (2023-08-12)}{
  \subsection{Notes}{
    \itemize{
     \item Update configure file to extend support for GCC

     \item Correct warnings in NEWS.Rd (strong)

     \item Correct typo in funique.Rd thanks to @davidbudzynski
    }
  }
}

\section{version 0.0.13 (2023-02-24)}{
  \subsection{Notes}{
    \itemize{
     \item Function \code{pprod} now returns double output even if inputs are integer - in line with \code{base::prod} - to avoid integer overflows.

     \item Update configure file
    }
  }
}

\section{version 0.0.12 (2022-10-26)}{
  \subsection{New Features}{
    \itemize{
      \item Function \code{pcountNA} is equivalent to \code{pcount(..., value = NA)}.
      